syntax = "proto3";

package workflow;

import "common/entities.proto";
import "common/metadata.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/compozy/compozy/pkg/pb/workflow";

// -----------------------------------------------------------------------------
// Command: Workflow Trigger
// -----------------------------------------------------------------------------

message CmdWorkflowTrigger {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;

  message Details {
    google.protobuf.Struct trigger_input = 1;
  }
  Details details = 3;
}

// -----------------------------------------------------------------------------
// Command: Workflow Execute
// -----------------------------------------------------------------------------

message CmdWorkflowExecute {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;

  message Details {
    google.protobuf.Struct trigger_input = 1;
    optional string task_id = 2;
    optional bool final_task = 3;
  }
  Details details = 3;
}

// -----------------------------------------------------------------------------
// Command: Workflow Pause
// -----------------------------------------------------------------------------

message CmdWorkflowPause {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
}

// -----------------------------------------------------------------------------
// Command: Workflow Resume
// -----------------------------------------------------------------------------

message CmdWorkflowResume {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
}

// -----------------------------------------------------------------------------
// Command: Workflow Cancel
// -----------------------------------------------------------------------------

message CmdWorkflowCancel {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
}
